--- a/watchlist/templates/index_teacher.html
+++ b/watchlist/templates/index_teacher.html
@@ -17,13 +17,13 @@
 				<div id="userinfo">
 					<select name="user" id="user">
 						<option selected="selected" value="0" class="userselect">
-							<span>Username</span>
+							<span>{{ current_user.username }}</span>
 						</option>
 						<option value="1" class="userselect">通知</option>
 						<option value="2" class="userselect">退出登录</option>
 					</select>
 				</div>
-				<div id="userimg">
+				<div id="user_img">
 					<img src="{{ current_user.pic_path }}" alt="image">
 				</div>				
 			</div>
@@ -37,7 +37,7 @@
 						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/index/">主页</a>
+						<a href="/index_teacher/">主页</a>
 					</div>
 				</div>
 
@@ -46,7 +46,7 @@
 						<img src="/static/pic/courses.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/my_courses/">我的课程</a>
+						<a href="/my_courses_teacher/">我的课程</a>
 					</div>
 				</div>
 
@@ -71,7 +71,7 @@
 
 			<div id="content">
 				<div id="my_courses" class="index_box">
-					<a href="/my_courses/">
+					<a href="/my_courses_teacher/">
 						<div class="index_img">
 							<img src="/static/pic/courses.png" alt="">
 						</div>
