pzq 6.20 一些按钮 & process_edit.html

--- a/watchlist/templates/course_xxx.html
+++ b/watchlist/templates/course_xxx.html
@@ -102,6 +102,9 @@
 				
 				<div id="course_below">
 					<div id="courseinfo">
+						<a id="choice_button" href="" class="button">
+							取消选课
+						</a>
 						<p href="xxx.html" style="font-size: 22px;font-weight: bold;">{{ course.name }}</p>
 						<div id="info" class="information">
 							<div id="teacherpic" class="teacherpic">
@@ -128,7 +131,6 @@
 									<img src="/static/pic/gpu.png" alt="">
 								</div>
 								{{ g['name'] }} --- {{ g['info'] }}
-								这个地方能显示成已用40%之类的吗
 							</a>
 						</div>
 						{% endif %}
