--- a/watchlist/static/style_student.css
+++ b/watchlist/static/style_student.css
@@ -410,7 +410,7 @@ html {
 }
 
 #edit {
-	height: 380px;
+	height: 345px;
 	padding: 10px;
 	margin: 10px;
 	font-size: 20px;
@@ -421,7 +421,7 @@ html {
 	border-radius: 10px;
 }
 #edit_text{
-	height:82%;
+	height:80%;
 	width:99%;
 	margin:3px;
 	overflow: auto;
@@ -432,7 +432,7 @@ html {
 }
 
 #result1 {
-	width: 90%;
+	width: 96%;
 	height: 30%;
 	border: 1px solid white;
 	padding: 10px;
@@ -443,7 +443,7 @@ html {
 	background: rgba(255, 255, 255, 0.2);
 }
 #result2 {
-	width: 90%;
+	width: 96%;
 	height: 70%;
 	border: 1px solid white;
 	padding: 10px;
@@ -457,7 +457,7 @@ html {
 	width: 99%;
 	height: 100%;
 	font-size: 20px;
-	padding: 5px;
+	padding: 8px;
 	background: rgba(255, 255, 255, 0.2);
 	border-radius: 5px;
 	font-size: 15px;
@@ -466,7 +466,7 @@ html {
 	width: 99%;
 	height: 68%;
 	font-size: 20px;
-	padding: 5px;
+	padding: 8px;
 	background: rgba(255, 255, 255, 0.2);
 	border-radius: 5px;
 	font-size: 15px;
@@ -572,6 +572,7 @@ html {
 	float: right;
 	padding:1px 5px;
 	margin:1px;
+	margin-top:-3px;
 	font-size:15px;
 	background: rgba(255, 255, 255,0.9);
 	color:black;
@@ -594,7 +595,7 @@ html {
 }
 #course_photo {
 	height: 80%;
-	width: 25%;
+	width: 27%;
 	float: left;
 	margin: 10px;
 	padding: 10px;
@@ -605,7 +606,7 @@ html {
 }
 #course_photo img{
 	height: 90%;
-	width: 70%;
+	width: 65%;
 }
 #course_notice {
 	height: 165px;
@@ -654,8 +655,7 @@ html {
 #courseinfo a{
 	color: black;
 	text-decoration: none;
-	font-size: 22px;
-	font-weight: bold;
+	font-size: 15px;
 }
 
 #coursegpu {
@@ -938,5 +938,151 @@ html {
 	background: rgba(255, 255, 255, 0.2);
 	color:black;
 	border:1px solid white;
+	border-radius: 3px;
+}
+#couresename{
+	width:95%;
+	height:40px;
+	text-align: center;
+	line-height: 40px;
+	/*border:1px solid;*/
+	margin:3px;
+	clear:both;
+}
+#couresename p{
+	font-size: 25px;
+	font-weight: bold;
+	text-indent: -156px;
+}
+#couresename a{
+	float:left;
+	text-decoration: none;
+	height: 30px;
+	padding: 0 5px;
+	margin:5px;
+	margin-left:8px;
+	font-size:15px;
+	line-height: 30px;
+	background: rgba(255, 255, 255, 0.2);
+	color:black;
+	text-decoration: none;
+	border:1px solid white;
+	border-radius: 5px;
+}
+#re_edit {
+	height: 25px;
+	/*width: 100px;*/
+	float:right;
+	margin-right: 82%;
+	border:1px solid white;
+	font-size: 15px;
+	font-weight: normal;
+	padding: 0 5px;
+	border-radius: 5px;
+	line-height: 25px;
+	background: rgba(255,255,255,0.2);
+	text-decoration:none;
+}
+#left{
+	width: 48%;
+	float: left;
+	height: 100%;
+	/*border:1px solid;*/
+	margin:5px;
+	padding: 5px;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 5px;
+}
+#right{
+	width: 48%;
+	float: left;
+	height: 100%;
+	/*border:1px solid;*/
+	background: rgba(255,255,255,0.2);
+	border-radius: 5px;
+	margin:5px;
+}
+#result1_1 {
+	width: 92%;
+	height: 30%;
+	border: 1px solid white;
+	padding: 10px;
+	margin: 5px;
+	font-size: 20px;
+	text-align: left;
+	border-radius: 5px;
+	background: rgba(255, 255, 255, 0.2);
+}
+#result2_2 {
+	width: 92%;
+	height: 70%;
+	border: 1px solid white;
+	padding: 10px;
+	margin: 5px;
+	font-size: 20px;
+	text-align: left;
+	border-radius: 5px;
+	background: rgba(255, 255, 255, 0.2);
+}
+#box1 {
+	width: 95%;
+	height: 100%;
+	font-size: 20px;
+	padding: 8px;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 5px;
+	font-size: 15px;
+}
+#box2 {
+	width: 95%;
+	height: 68%;
+	font-size: 20px;
+	padding: 8px;
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 5px;
+	font-size: 15px;
+	overflow: auto;
+}
+
+
+#result-xxx {
+	height: 300px;
+	width: 100%;
+	border: 1px solid white;
+	font-size: 20px;
+	text-indent: 40em;
+	background: rgba(255, 255, 255, 0.2);
+}
+#re_edit_text{
+	height:90%;
+	width:95%;
+	margin:8px;
+	overflow: auto;
+	background: rgba(255, 255, 255, 0.65);
+	padding: 5px;
+	border: 1px solid rgba(255, 255, 255, 0.6);
+	border-radius: 5px;
+	text-align: left;
+}
+#re_edit_title{
+	width:95%;
+	height:25px;
+	text-align: center;
+	line-height: 25px;
+	/*border:1px solid;*/
+	margin:3px;
+	margin-top: 8px;
+	clear:both;
+	font-size:25px;
+}
+#re_edit_button{
+	float: right;
+	padding:1px 5px;
+	margin:2px;
+	margin-top:-5px;
+	margin-left: 8px;
+	font-size:15px;
+	background: rgba(255, 255, 255,0.9);
+	color:black;
 	border-radius: 3px;
 }
