--- a/watchlist/templates/my_courses_teacher.html
+++ b/watchlist/templates/my_courses_teacher.html
@@ -60,7 +60,7 @@
 						<img src="/static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/process/">进程</a>
+						<a href="/GPUs/">GPU列表</a>
 					</div>
 				</div>
 
@@ -69,7 +69,7 @@
 						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/settings/">设置</a>
+						<a href="/settings_teacher/">设置</a>
 					</div>
 				</div>
 			</div>
