学生端选课改版 pzq 6.20

--- a/watchlist/templates/all_courses.html
+++ b/watchlist/templates/all_courses.html
@@ -74,7 +74,7 @@
 			<div id="content">
 				{% for c in courses %}
 					<div id="课程盒子" class="index_box">
-						<a id="choice_button" href="" class="button">已选课程/申请选课</a>
+						<!-- <a id="choice_button" href="" class="button">已选课程/申请选课</a> -->
 						<p href="/my_courses/all_courses/{{ c['id'] }}/" style="font-size: 25px;font-weight: bold;">
 							{{ c['name'] }}
 						</p>
