--- a/watchlist/templates/my_courses.html
+++ b/watchlist/templates/my_courses.html
@@ -102,10 +102,10 @@
 						<p>添加课程</p>
 					</a>
 					<div id="xxxinfo" class="information">
-						<!-- <div class="index_img">
-							<img src="/static/pic/add_.png" alt="">
-						</div> -->
-						<p>课程不在列表里？加入新的课程</p>
+						<div class="index_img">
+							<img src="/static/pic/look.png" alt="">
+						</div>
+						<p>看看还有什么其他课程</p>
 					</div>
 				</div>
 				<p style="clear:both;" class="index_box_no">--没有更多课程--</p>
