--- a/watchlist/templates/new_courses.html
+++ b/watchlist/templates/new_courses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My Course</title>
+	<title>GPUs</title>
 	<link rel="stylesheet" href="/static/style_teacher.css" />
 </head>
 <body>
@@ -14,7 +14,7 @@
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
-	            <img src="/static/pic/logo.png" alt="">
+	            <img src="../static/pic/logo.png" alt="">
 	            <span>GPU管理系统</span>
 	        </div>
 
@@ -72,11 +72,6 @@
 						<a href="/settings_teacher/">设置</a>
 					</div>
 				</div>
-			</div>
-			<div id="content">
-			<form method="POST" action="/course_student/">
-				<input id="course_student_button" type="submit" class="button is-info" value="选课学生情况">
-			</form>
 			</div>
 
 
