--- a/watchlist/templates/course_student.html
+++ b/watchlist/templates/course_student.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Progress</title>
-	<link rel="stylesheet" href="../static/style_teacher.css" />
+	<title>My courses</title>
+	<link rel="stylesheet" href="/static/style_teacher.css" />
 </head>
 <body>
-	{% for message in get_flashed_messages() %}
-	    <div class="alert" style="float:left;margin-left:45%;margin-top:8px;text-align:center;font-size:18px;color:black;width:20%;font-weight:bold;">
-	    	{{ message }}
-	    </div>
-	{% endfor %}
+{% for message in get_flashed_messages() %}
+
+    <div class="alert">{{ message }}</div>
+
+{% endfor %}
 	<div id="container">
 		<div id="header" >
 			<div id="logo">
@@ -19,15 +19,18 @@
 	        </div>
 
 			<div id="other">
-				<form form method="POST" action="/logout/">
-					<a id="login_out" href="/logout/" class="button">退出登录</a>
-					<div id="user_img">
-						<img src="{{ current_user.pic_path }}" alt="image">
-					</div>
-					<div id="user_name">
-						<span>{{ current_user.username }}</span>
-					</div>
-				</form>			
+				<div id="userinfo">
+					<select name="user" id="user" onchange="window.location=this.value;">
+						<option selected="selected" value="0" class="userselect">
+							<span>{{ current_user.username }}</span>
+						</option>
+						<option value="/teacher_notice/" class="userselect">通知</option>
+						<option value="/logout/" class="userselect">退出登录</option>
+					</select>
+				</div>
+				<div id="user_img">
+					<img src="{{ current_user.pic_path }}" alt="image">
+				</div>				
 			</div>
 		</div>
 
@@ -39,7 +42,7 @@
 						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/index/">主页</a>
+						<a href="/index_teacher/">主页</a>
 					</div>
 				</div>
 
@@ -48,7 +51,7 @@
 						<img src="/static/pic/courses.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/my_courses/">我的课程</a>
+						<a href="/my_courses_teacher/">我的课程</a>
 					</div>
 				</div>
 
@@ -66,7 +69,7 @@
 						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/settings/">设置</a>
+						<a href="/settings_teacher/">设置</a>
 					</div>
 				</div>
 			</div>
@@ -88,7 +91,7 @@
 
 				<p class="index_box_no">--没有更多学生--</p>
                 
-                <label class="ui_button ui_button_primary" for="xFile">上传文件</label>
+                <label class="ui_button ui_button_primary" for="xFile">导入学生列表</label>
                 <form><input type="file" id="xFile" style="position:absolute;clip:rect(0 0 0 0);"></form>
                 
 			</div>
