--- a/watchlist/templates/teacher_notice.html
+++ b/watchlist/templates/teacher_notice.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Settings</title>
-	<link rel="stylesheet" href="../static/style.css" />
+	<title>Notice</title>
+	<link rel="stylesheet" href="/static/style_teacher.css" />
 </head>
 <body>
 	{% for message in get_flashed_messages() %}
@@ -19,15 +19,18 @@
 	        </div>
 
 			<div id="other">
-				<form form method="POST" action="/logout/">
-					<a id="login_out" href="/logout/" class="button">退出登录</a>
-					<div id="user_img">
-						<img src="{{ current_user.pic_path }}" alt="image">
-					</div>
-					<div id="user_name">
-						<span>{{ current_user.username }}</span>
-					</div>
-				</form>			
+				<div id="userinfo">
+					<select name="user" id="user" onchange="window.location=this.value;">
+						<option selected="selected" value="0" class="userselect">
+							<span>{{ current_user.username }}</span>
+						</option>
+						<option value="/teacher_notice/" class="userselect">通知</option>
+						<option value="/logout/" class="userselect">退出登录</option>
+					</select>
+				</div>
+				<div id="user_img">
+					<img src="{{ current_user.pic_path }}" alt="image">
+				</div>				
 			</div>
 		</div>
 
@@ -36,25 +39,25 @@
 				<br>
 				<div id="Home Page">
 					<div class="asidepic">
-						<img src="../static/pic/home.png" alt="">
+						<img src="/static/pic/home.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/index/">主页</a>
+						<a href="/index_teacher/">主页</a>
 					</div>
 				</div>
 
 				<div id="My courses">
 					<div class="asidepic">
-						<img src="../static/pic/courses.png" alt="">
+						<img src="/static/pic/courses.png" alt="">
 					</div>
 					<div class="asidechoices">
-						<a href="/my_courses/">我的课程</a>
+						<a href="/my_courses_teacher/">我的课程</a>
 					</div>
 				</div>
 
 				<div id="Process">
 					<div class="asidepic">
-						<img src="../static/pic/process.png" alt="">
+						<img src="/static/pic/process.png" alt="">
 					</div>
 					<div class="asidechoices">
 						<a href="/GPUs/">GPU列表</a>
@@ -63,7 +66,7 @@
 
 				<div id="Settings">
 					<div class="asidepic">
-						<img src="../static/pic/settings.png" alt="">
+						<img src="/static/pic/settings.png" alt="">
 					</div>
 					<div class="asidechoices">
 						<a href="/settings_teacher/">设置</a>
@@ -73,17 +76,17 @@
 
 			<div id="content">
 				<div id="coure_notice" class="index_box">
-					<a href="/my_courses/">
+					<a href="/my_courses_teacher/1/">
 						<div class="index_img">
 							<img src="../static/pic/courses.png" alt="">
 						</div>
 						<p>程序设计</p>
 					</a>
-					<form method="POST" action="/">
+					<form method="POST" action="/teacher_notice_new/">
 						<input id="new_notice_button" type="submit" class="button is-info" value="发布新的通知">
 					</form>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/1/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -91,7 +94,7 @@
 						</a>
 					</div>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/2/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -99,7 +102,7 @@
 						</a>
 					</div>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/3/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -110,17 +113,17 @@
 				</div>
 
 				<div id="coure_notice" class="index_box">
-					<a href="/my_courses/">
+					<a href="/my_courses_teacher/2/">
 						<div class="index_img">
 							<img src="../static/pic/courses.png" alt="">
 						</div>
 						<p>机器学习</p>
 					</a>
-					<form method="POST" action="/">
+					<form method="POST" action="/teacher_notice_new/">
 						<input id="new_notice_button" type="submit" class="button is-info" value="发布新的通知">
 					</form>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/1/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -128,7 +131,7 @@
 						</a>
 					</div>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/2/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -136,7 +139,7 @@
 						</a>
 					</div>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/3/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -147,17 +150,17 @@
 				</div>
 
 				<div id="coure_notice" class="index_box">
-					<a href="/my_courses/">
+					<a href="/my_courses_teacher/3/">
 						<div class="index_img">
 							<img src="../static/pic/courses.png" alt="">
 						</div>
 						<p>人工智能</p>
 					</a>
-					<form method="POST" action="/">
+					<form method="POST" action="/teacher_notice_new/">
 						<input id="new_notice_button" type="submit" class="button is-info" value="发布新的通知">
 					</form>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/1/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -165,7 +168,7 @@
 						</a>
 					</div>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/2/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -173,7 +176,7 @@
 						</a>
 					</div>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/3/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -184,17 +187,17 @@
 				</div>
 
 				<div id="coure_notice" class="index_box">
-					<a href="/my_courses/">
+					<a href="/my_courses_teacher/4/">
 						<div class="index_img">
 							<img src="../static/pic/courses.png" alt="">
 						</div>
 						<p>人工神经网络</p>
 					</a>
-					<form method="POST" action="/">
+					<form method="POST" action="/teacher_notice_new/">
 						<input id="new_notice_button" type="submit" class="button is-info" value="发布新的通知">
 					</form>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/1/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -202,7 +205,7 @@
 						</a>
 					</div>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/2/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -210,7 +213,7 @@
 						</a>
 					</div>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/3/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -221,17 +224,17 @@
 				</div>
 
 				<div id="coure_notice" class="index_box">
-					<a href="/my_courses/">
+					<a href="/my_courses_teacher/5/">
 						<div class="index_img">
 							<img src="../static/pic/courses.png" alt="">
 						</div>
 						<p>xxx实验室</p>
 					</a>
-					<form method="POST" action="/">
+					<form method="POST" action="/teacher_notice_new/">
 						<input id="new_notice_button" type="submit" class="button is-info" value="发布新的通知">
 					</form>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/1/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -239,7 +242,7 @@
 						</a>
 					</div>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/2/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
@@ -247,7 +250,7 @@
 						</a>
 					</div>
 					<div class="index_coursebox">
-						<a href="">
+						<a href="/teacher_notice/3/">
 							<div class="index_img">
 								<img src="../static/pic/message_.png" alt="">
 							</div>
