教师端更新-by hpx

--- a/watchlist/templates/login.html
+++ b/watchlist/templates/login.html
@@ -8,7 +8,7 @@
 <div id="container">
     <div id="header" >
 		<div id="logo">
-			<img src="../static/pic/logo.png" alt="">
+			<img src="/static/pic/logo.png" alt="">
 			<span>GPU管理系统</span>
 		</div>
 
